--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Homepage - Xuxi Chen # the website title (if blank, full name will be use
 first_name: Xuxi
 middle_name: 
 last_name: Chen
-email: xxchen@utexas.com
+email: xxchen@utexas.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
