--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ stackoverflow_id: #your stackoverflow id
 contact_note: >
   Please contact me by emails. 
 
-google_analytics: UA-235977097-1 # your google-analytics ID (format: UA-XXXXXXXXX)
+google_analytics: # your google-analytics ID (format: UA-XXXXXXXXX)
 google_site_verification:  # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
